--- a/NetExplorer/templates/NetExplorer/contig_card.html
+++ b/NetExplorer/templates/NetExplorer/contig_card.html
@@ -546,6 +546,7 @@
 
     <script>
         $(document).ready(function(){
+            $.fn.dataTable.ext.errMode = 'throw';
             $('#int-table').DataTable({
                 "order": [[ 1, "desc" ]]
             });
