--- a/NetExplorer/templates/NetExplorer/base.html
+++ b/NetExplorer/templates/NetExplorer/base.html
@@ -13,14 +13,14 @@
         <link rel="stylesheet" href="{% static 'css/jquery-ui.structure-all.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/jquery-ui-all.theme.min.css' %}">
         <link rel="shortcut icon" href="{% static 'Images/mini-logo.ico' %}">
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-40314676-2"></script>
         <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-
-            gtag('config', 'UA-40314676-2');
+                function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+              })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          
+              ga('create', 'UA-67292161-1', 'auto');  // Replace with your property ID.
+              ga('send', 'pageview');
         </script>
 
         <title>PlanNET {% block title %} {% endblock title %}</title>
