--- a/NetExplorer/static/css/style.css
+++ b/NetExplorer/static/css/style.css
@@ -2189,9 +2189,9 @@ kbd {
     width: 100% !important;
 }
 
-.human-select { background-color: #6785d0 !important; }
+.human-select { background-color: #6785d0 !important; padding: 6px 6px !important; }
+.gene-select { background-color: #c45ca2 !important; padding: 6px 6px !important; }
 .human-color {color: #6785d0; }
-.gene-select { background-color: #c45ca2 !important; }
 .jbrowser-subtitle { float:right; }
 
 .panel-genesearch { background-color: #d9edf7 !important ; font-size: 12px;}
