--- a/NetExplorer/templates/NetExplorer/netexplorer.html
+++ b/NetExplorer/templates/NetExplorer/netexplorer.html
@@ -265,6 +265,7 @@
                             </div>
                     </div>
                 </div>
+                <div style="height:100px"> </div>
                 <div id="map-expression-dialog-send">
                     <div id="map-expression-error" class="panel panel-danger">
                         <div class="panel-heading">
