--- a/NetExplorer/templates/NetExplorer/base.html
+++ b/NetExplorer/templates/NetExplorer/base.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="{% static 'css/footer.css' %}">
         <link rel="stylesheet" href="{% static 'css/bootstrap-min.css' %}">
         <link rel="stylesheet" href="{% static 'css/jquery-data-tables.css' %}">
+        <link rel="stylesheet" href="https://cdn.datatables.net/buttons/1.5.2/css/buttons.dataTables.min.css">
         <link rel="stylesheet" href="{% static 'css/bootstrap-select.min.css' %}">
         <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}">
         <link rel="stylesheet" href="{% static 'css/jquery-ui.structure-all.min.css' %}">
@@ -125,6 +126,8 @@
         <script src="{% static 'js/root.js' %}"></script>
         <script src="{% static 'js/jquery-min.js' %}"></script>
         <script src="{% static 'js/jquery-data-tables-min.js' %}"></script>
+        <script src="https://cdn.datatables.net/buttons/1.5.2/js/dataTables.buttons.min.js"></script>
+        <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.html5.min.js"></script>
         <script src="{% static 'js/bootstrap-min.js' %}"></script>
         <script src="{% static 'js/bootstrap-select.min.js' %}"></script>
         <script src="{% static 'js/back-to-top.js' %}"></script>
