--- a/NetExplorer/templates/NetExplorer/smesgene_card.html
+++ b/NetExplorer/templates/NetExplorer/smesgene_card.html
@@ -98,7 +98,7 @@
     
         <h2><span class="glyphicon glyphicon-tag"></span> Gene Ontologies</h2>
         <hr class="h2-sep">
-            Predicted from longest transcript: <a
+            Predicted from longest associated transcript: <a
             class="card-link"
             current="{{ node.symbol|urlencode}}"
             currentDB="{{ node.database }}"
@@ -144,7 +144,7 @@
         </div>
     </div>
 
-    Predicted from longest transcript: <a
+    Predicted from longest associated transcript: <a
         class="card-link"
         current="{{ node.symbol|urlencode}}"
         currentDB="{{ node.database }}"
