Import graph to planexp.

--- a/NetExplorer/templates/NetExplorer/base.html
+++ b/NetExplorer/templates/NetExplorer/base.html
@@ -125,6 +125,7 @@
 
         <script src="{% static 'js/root.js' %}"></script>
         <script src="{% static 'js/jquery-min.js' %}"></script>
+        <script src="{% static 'js/cytoscape.js' %}"></script>
         <script src="{% static 'js/jquery-data-tables-min.js' %}"></script>
         <script src="https://cdn.datatables.net/buttons/1.5.2/js/dataTables.buttons.min.js"></script>
         <script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.html5.min.js"></script>
